# aleph-vortex-app

./: .dockerignore  .env.dist  .gitignore  Dockerfile  Makefile  README.md  Vagrantfile  docker-compose.yml  main.py  pyproject.toml
.circleci/: config.ethereum_v1.yml  config.fullstack_v1.yml  config.fullstack_v2.yml  config.fullstack_v3.yml  workflows.yml
.devcontainer/: devcontainer.json
.github/workflows/: actions.yaml
src/: main.py
src/classes/: indexer.py  operations.py
src/classes/contract/: contract_dex.py  contract_factory_doga.py  contract_factory_fa12.py  contract_factory_fa2.py  contract_farms_v1.py  contract_farms_v2.py  contract_staking_smak.py  contract_token_anti.py  contract_token_smak.py
src/tests/samples/: storage_farms_v2.json
src/utils/: database.py  env.py  graphql.py  tzkt.py
src/utils/sql/: init.sql
volumes/pgadmin4/: servers.json
